# life-science-llm-evaluation

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
.cursor/rules/: 00-project.mdc  10-python.mdc  20-retrieval.mdc  30-eval.mdc  40-hypothesis.mdc
.github/workflows/: ci.yml
data/datasets/bioasq/: sample.jsonl
data/datasets/medmcqa/: sample.jsonl
data/datasets/medqa/: sample.jsonl
data/datasets/mmlu_med/: sample.jsonl
data/datasets/pubmedqa/: sample.jsonl
data/fewshot/: bioasq.json  medqa.json
frontend/: app.py
scripts/: ingest.py  init_db.sql  init_schema.py  search_demo.py  smoke.py
src/biolit/: __init__.py
src/biolit/api/: main.py
src/biolit/api/routers/: eval.py  hypothesis.py  jobs.py  retrieve.py
src/biolit/core/: __init__.py  cache.py  config.py  costing.py  db.py  llm.py  logging.py
src/biolit/eval/: __init__.py  datasets.py  export.py  judge.py  leaderboard.py  metrics.py  parse.py  runners.py  service.py  templates.py
src/biolit/hypothesis/: __init__.py  convert.py  feedback.py  graph.py  json_utils.py  models.py  provenance.py  schemas.py  service.py  tournament.py
src/biolit/hypothesis/agents/: __init__.py  evolution.py  generation.py  (+3 more)
src/biolit/ingest/: __init__.py  chunking.py  indexer.py  models.py  parsers.py  pubmed_client.py
src/biolit/retrieval/: __init__.py  bm25.py  dense_medcpt.py  fusion.py  rerank.py  service.py  torch_compat.py  types.py
src/biolit/worker/: __init__.py  jobs.py  settings.py  tasks.py
tests/: test_eval_api.py  test_health.py  test_hypothesis_api.py  test_hypothesis_interactive.py  test_retrieve_api.py
tests/fixtures/pubmed/: efetch_trem2.xml  esearch_trem2.json  esummary_trem2.json
tests/integration/: test_pipelines.py
tests/unit/: test_bm25.py  test_chunking.py  test_cite_only.py  test_config.py  test_costing.py  test_eval_phase7.py  test_fusion_rerank.py  test_hypothesis_schemas.py  test_indexer.py  test_metrics.py  test_parse_golden.py  test_pubmed_client.py
tests/unit/fixtures/: parse_outputs.json
web/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
web/e2e/: smoke.spec.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: DeltaBar.tsx  EloRow.tsx  EvidenceTrail.tsx  FilterChips.tsx  JobStatus.tsx  ScoreBreakdown.tsx  StanceChip.tsx
web/src/lib/: api.ts  types.ts  useHealth.ts  useJob.ts
(+6 files in other folders)
