[project]
name = "biolit"
version = "0.1.0"
description = "Biomedical literature retrieval, LLM evaluation, and hypothesis generation"
readme = "README.md"
authors = [
    { name = "Simongriffin1", email = "stgriffin@uchicago.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "psycopg[binary,pool]>=3.2.0",
    "pgvector>=0.3.6",
    "redis>=5.2.0",
    "arq>=0.26.0",
    "litellm>=1.52.0",
    "langgraph>=0.2.0",
    "langfuse>=2.50.0",
    "rank-bm25>=0.2.2",
    # torch 2.2.x (Intel macOS pin) is built against NumPy 1.x
    "numpy>=1.26.0,<2",
]

[project.optional-dependencies]
# MedCPT / dense retrieval (Phase 2+). Pin torch for Intel macOS Ventura wheels.
# transformers 5.x requires torch>=2.4; keep 4.x for the Intel torch pin.
retrieval = [
    "torch>=2.2.2,<2.3; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torch>=2.2.2; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "transformers>=4.44.0,<5",
    "sentence-transformers>=3.0.0,<4",
]
datasets = [
    "datasets>=3.0.0",
]
frontend = [
    "streamlit>=1.40.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
biolit = "biolit:main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["biolit"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "litellm.*",
    "langfuse.*",
    "arq.*",
    "pgvector.*",
    "rank_bm25",
    "transformers",
    "transformers.*",
    "torch",
    "torch.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "live: hits live NCBI and/or LLM APIs (excluded from CI by default)",
    "medcpt: requires MedCPT / torch retrieval extra",
]
